[package]
name = "mpw_core"
version = "0.1.0"
edition = "2024"

[dependencies]
openssl = { version = "0.10.73", features = ["vendored"] }
ring = "0.17.14"
secure-string = "0.3.0"
cryptostream = "0.3.2"
thiserror = "2.0.16"
constcat = "0.6.1"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
tempfile = "3.23.0"