[package]
name = "mpw_daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
clap = { version = "4.5.54", features = ["derive"] }
mpw_core = { path = "../mpw_core" }
secure-string = { version = "0.3.0", features = ["serde"] }
log = "0.4.29"
env_logger = "0.11.8"
arboard = "3.6.1"

[features]
wayland-clipboard = ["arboard/wayland-data-control"]
